--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p2>მისი ორი წინამორბედი მასკულინური მელოდრამა, ,,ესაუბრე მას’’ (2002) და ,,ცუდი განათელბა’’ (2004),  მანამდე შეუსწვლელ, რუკაზე აღუნიშნავ ტერიტორიაზე იმყოფებოდა, მაშინ როდესაც ,,ვოლვერი’’, რომელიც ითარგმნება, როგორც ,,დაბრუნება’’, თავიდან სტუმრობს ქალებით ცენტრალიზებულ ტერიტორიას ფილმებისა, როგორებიცაა ,,ყველაფერი დედაჩემის შესახებ’’ (1999) და ,,ქალები ნერვიული აშლილობის ზღვარზე’’ (1988). ,,ვოლვერი’’  სავსე სიურპრიზებითა და მოულოდნელი ცვლილებებით, ამჟღავნების სუნთქვის შემკვრელ სიმსუბუქესა და თავდაჯერებულობას.  შეიძლება ითქვას, რომ ზემოთ ნახსენებ ფილმებთან შედარებით ,,ესაუბრე მას’’ და ,,ცუდი განათლება, ,,ვოლვერი’’, პატარა და მარტივია, რომელიც თავის ისტორიას ნაკლები რეტროსპექტიულობითა და ნაკლებად ჩახლართული გეგმით მოგვითხრობს, თუმცა ვერ ვიტყვით, რომ ის ნაკლებად პროფესიონალური ნამუშევარია. რეჟისორმა ის დამახასიათებელი სული, რომელიც მაყურებლისათვის უნიკალურია, ეფექტურად გადმოსცა სიცოცხლით სავსე და გამჭრიახი მსახიობებით, განსაკუთრებით კი პენელოპე კრუზი ამ ფილმისათვის ერთ-ერთი ყველაზე მნიშვნელოვანი შტრიხია. </p2>
     
     <a href="main plot.html" target="_blank">მოკლე შინაარსი</a>
-    <img src=""https://www.intofilm.org/intofilm-production/scaledcropped/970x546https%3A/s3-eu-west-1.amazonaws.com/images.cdn.filmclub.org/film__3144-volver--hi_res-fa2b66bb.jpg/film__3144-volver--hi_res-fa2b66bb.jpg alt="volver" width="500" height="500"> 
-    
+    <p>
+    <img src="https://photos1.blogger.com/x/blogger/5654/208/1600/771851/volver.jpg"alt="volver" width="500" height="400"> 
+    </p>
 </body>
